--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=auth
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=122996
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
